Benchmark result loader and visualization helpers.

--- a/docs/developer/benchmark.ipynb
+++ b/docs/developer/benchmark.ipynb
@@ -91,7 +91,9 @@
    "source": [
     "def test_func(x: float) -> float:\n",
     "    from time import sleep\n",
+    "    import random\n",
     "    sleep(x)\n",
+    "    sleep(random.random()*0.1)\n",
     "\n",
     "    return x\n",
     "\n",
@@ -158,12 +160,6 @@
    "source": [
     "from tests.benchmarks.runner import BenchmarkRunner\n",
     "runner = benchmark_session_factory[BenchmarkRunner]  # SimpleRunner\n",
-    "\n",
-    "def test_func(x: float) -> float:\n",
-    "    from time import sleep\n",
-    "    sleep(x)\n",
-    "\n",
-    "    return x\n",
     "\n",
     "single_report = runner(test_func, 0.1)\n",
     "Pretty(single_report)"
@@ -315,7 +311,274 @@
     "\n",
     "By default, it saves a result under ``.benchmarks/`` directory as a json file.\n",
     "\n",
-    "If you want to choose a different directory to save the benchmark result, replace the provider of ``BenchmarkRootDir``."
+    "If you want to choose a different directory to save the benchmark result, replace the provider of ``BenchmarkRootDir``.\n",
+    "\n",
+    "To avoid unnecessary file handling in the example, we will define a context manager that temporarily saves the results in the current directory here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "973c98c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from contextlib import contextmanager\n",
+    "\n",
+    "@contextmanager\n",
+    "def temporary_save(*sessions):\n",
+    "    import os\n",
+    "    original_file_path = {\n",
+    "        i_session: session.file_manager.file_path\n",
+    "        for i_session, session in enumerate(sessions)\n",
+    "    }\n",
+    "\n",
+    "    for i_session, session in enumerate(sessions):\n",
+    "        session.file_manager.file_path = Path('./result-%d.json' % i_session)\n",
+    "        session.save()\n",
+    "    yield None\n",
+    "\n",
+    "    for i_session, session in enumerate(sessions):\n",
+    "        os.remove(session.file_manager.file_path)\n",
+    "        session.file_manager.file_path = original_file_path[i_session]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d42ac56",
+   "metadata": {},
+   "source": [
+    "## Benchmark Result Loader\n",
+    "\n",
+    "Benchmark loader, ``tests.benchmarks.loader`` can reconstruct ``BenchmarkReport(ReportTemplate)`` from a saved json file.\n",
+    "``ReportTemplate`` can be exported as a ``pandas.DataFrame``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f86d9d0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import asdict\n",
+    "from tests.benchmarks.loader import reconstruct_report\n",
+    "\n",
+    "Pretty(reconstruct_report(asdict(session.report)), max_depth=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5880627a",
+   "metadata": {},
+   "source": [
+    "You can merge multiple reports into one data frame.\n",
+    "\n",
+    "Let's merge reports from ``session`` and ``timeit_session``.\n",
+    "\n",
+    "Note that ``NaN`` will be filled, if there is a missing columns in the report compared to other reports."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "553459ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tests.benchmarks.loader import merge_measurements\n",
+    "\n",
+    "df = merge_measurements({\n",
+    "    'simple': reconstruct_report(asdict(session.report)),\n",
+    "    'timeit': reconstruct_report(asdict(timeit_session.report)),\n",
+    "})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92a7d744",
+   "metadata": {},
+   "source": [
+    "You can also easily load and merge all reports from a single directory like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f77d1955",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "from beamlime.constructors import Factory\n",
+    "from tests.benchmarks.loader import loading_providers, MergedMeasurementsDF, BenchmarkRootDir\n",
+    "\n",
+    "result_factory = Factory(loading_providers)\n",
+    "\n",
+    "with temporary_save(session):\n",
+    "    with result_factory.constant_provider(BenchmarkRootDir, Path('./')):\n",
+    "        # Replace './' with the path to the directory containing the saved results.\n",
+    "        df = result_factory[MergedMeasurementsDF]\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69782d32",
+   "metadata": {},
+   "source": [
+    "Let's run more tests for visualization example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc4d9eb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with session.configure(iterations=3):\n",
+    "    for i in range(4):\n",
+    "        session.run(test_func, 0.1+i*0.1)\n",
+    "\n",
+    "with temporary_save(session):\n",
+    "    with result_factory.constant_provider(BenchmarkRootDir, Path('./')):\n",
+    "        # Replace './' with the path to the directory containing the saved results.\n",
+    "        df = result_factory[MergedMeasurementsDF]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd5cd2a3",
+   "metadata": {},
+   "source": [
+    "## Benchmark Result Visualization\n",
+    "\n",
+    "There are also helpers for visualizing results. <br>\n",
+    "It was much easier to use ``scipp`` and ``plopp`` so we will convert the ``pandas.DataFrame`` that we loaded to ``scipp.Dataset``. <br>\n",
+    "The data frame column name has unit in the bracket, that can be parsed by ``scipp.compat.pandas_compat.parse_bracket_header``. <br>\n",
+    "\n",
+    "The measurement data is ``time`` column, so other columns will be coordinates."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73126aa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from scipp.compat.pandas_compat import from_pandas, parse_bracket_header\n",
+    "\n",
+    "df.drop(columns=['environment'], inplace=True)  # Remove unnecessary columns.\n",
+    "ds = from_pandas(df, header_parser=parse_bracket_header, data_columns='time')\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47c72458",
+   "metadata": {},
+   "source": [
+    "Now we can easily convert ``time [s]`` to ``frequency [Hz]``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "534a43c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds['frequency'] = 1 / ds['time']\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28f9ae38",
+   "metadata": {},
+   "source": [
+    "And there is a helper to calculate average value of data per bin as well as sample variance.\n",
+    "\n",
+    "First, we will bin the data per ``x``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a5f901f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binned = ds['time'].group('x')\n",
+    "binned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08972d6d",
+   "metadata": {},
+   "source": [
+    "And you can use the helper to calculate average values and sample variance per bin.\n",
+    "\n",
+    "It should have the same shape as the binned data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4383f75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tests.benchmarks.calculations import sample_mean_per_bin, sample_variance_per_bin\n",
+    "\n",
+    "da = sample_mean_per_bin(binned)\n",
+    "da.variances = sample_variance_per_bin(binned).values\n",
+    "\n",
+    "da"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "137502be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plopp as pp\n",
+    "\n",
+    "plot = pp.plot({'all-tests': da}, grid=True, title='Dummy function benchmark result.')\n",
+    "plot.ax.set_ylim(0.05, 0.55)\n",
+    "plot.ax.set_ylabel('Time [s]')\n",
+    "plot.ax.set_xlabel('Parameter `x`')\n",
+    "plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee46331a",
+   "metadata": {},
+   "source": [
+    "The sample variance will make it easier to compare different groups of results. <br>\n",
+    "``sample_variance`` function was used to calculate sample variance per bin. (In ``tests.benchmarks.calculations`` module.) <br>\n",
+    "It uses the following equation: <br>\n",
+    "$$\n",
+    "\\text{sample variance} = \\frac{\\sum{(x_i - \\bar{x})^2}}{n-1}\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$x_i = \\text{each value of data (benchmark measurement)}$$\n",
+    "$$\\bar{x} = \\text{mean value of all } x$$\n",
+    "$$n = \\text{number of data points}$$\n",
+    "\n",
+    "Since the degree of freedom is $n-1$, it returns ``NaN`` if there are not enough data ($< 2$).\n"
    ]
   },
   {
