Fix section title link.

--- a/docs/developer/benchmark.ipynb
+++ b/docs/developer/benchmark.ipynb
@@ -29,7 +29,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3aaa96a4",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "import sys, os\n",
@@ -135,7 +137,7 @@
     "\n",
     "If you need multi-thousands iterations similar to ``timeit``, you can write a special ``runner`` to do so.\n",
     "\n",
-    "See [Exercies: TimeIt Runner](Exercise:-TimeIt-Runner) for an example."
+    "See [Exercise: TimeIt Runner](#Exercise:-TimeIt-Runner) as an example."
    ]
   },
   {
