Download benchmark results from server.

--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -62,12 +62,15 @@
    "outputs": [],
    "source": [
     "from tests.benchmarks.environments import env_providers\n",
-    "from tests.benchmarks.loader import loading_providers, MergedMeasurementsDF, BenchmarkRootDir\n",
+    "from tests.benchmarks.loader import loading_providers, MergedMeasurementsDF, BenchmarkRootDir, ResultMap\n",
     "from beamlime.constructors import Factory\n",
-    "from pathlib import Path\n",
+    "from docs.about.data import benchmark_results\n",
+    "import json\n",
     "\n",
+    "results = benchmark_results()\n",
+    "results_map = json.loads(results.read_text())\n",
     "factory = Factory(loading_providers, env_providers)\n",
-    "with factory.constant_provider(BenchmarkRootDir, Path('../../.benchmarks/')):\n",
+    "with factory.constant_provider(ResultMap, results_map):\n",
     "    df = factory[MergedMeasurementsDF]"
    ]
   },
@@ -149,7 +152,7 @@
     "da_64_cores = da['cpu_cores', sc.scalar(63, unit='GB')]\n",
     "\n",
     "# Create a meta string with the selected data.\n",
-    "df_64_cores = df[df['cpu_cores [GB]']==63]\n",
+    "df_64_cores = df[df['cpu_cores [GB]']==63].reset_index(drop=True)\n",
     "df_64_cores_environments = df_64_cores['environment'][0]\n",
     "meta_64_cores = [\n",
     "    f\"{ds.coords['target-name'][0].value} \"\n",
