--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "from tests.benchmarks.environments import env_providers\n",
-    "from tests.benchmarks.loader import loading_providers, MergedMeasurementsDF, BenchmarkRootDir, ResultMap\n",
+    "from tests.benchmarks.loader import loading_providers, MergedMeasurementsDF, ResultMap\n",
     "from beamlime.constructors import Factory\n",
     "from docs.about.data import benchmark_results\n",
     "import json\n",
