Remove __init__ from tests and collect helper modules into helper package.

--- a/docs/developer/benchmark.ipynb
+++ b/docs/developer/benchmark.ipynb
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath('../../'))  # To use ``tests`` as a package."
+    "sys.path.insert(0, os.path.abspath('../../tests/helpers/'))  # To use ``tests`` as a package.\n",
+    "                                                             # This path is already included in ``pyproject.toml``."
    ]
   },
   {
@@ -135,7 +136,7 @@
     "\n",
     "If you need multi-thousands iterations similar to ``timeit``, you can write a special ``runner`` to do so.\n",
     "\n",
-    "See [Exercies: TimeIt Runner](Exercise:-TimeIt-Runner) for an example."
+    "See [Exercies: TimeIt Runner](#Exercise:-TimeIt-Runner) for an example."
    ]
   },
   {
