Performance difference visualization.

--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -24,7 +24,9 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../../')  # To use ``tests`` as a package."
+    "\n",
+    "sys.path.append('../../')  # To use ``docs`` as a package.\n",
+    "sys.path.append('../../tests/helpers/')  # To use ``tests`` as a package."
    ]
   },
   {
@@ -91,7 +93,7 @@
     "    return env.hardware_spec.cpu_spec.process_cpu_affinity.value\n",
     "\n",
     "df[\"total_memory [GB]\"] = df['environment'].apply(retrieve_total_memory)\n",
-    "df[\"cpu_cores [GB]\"] = df['environment'].apply(retrieve_cpu_cores)\n",
+    "df[\"cpu_cores\"] = df['environment'].apply(retrieve_cpu_cores)\n",
     "\n",
     "# Fix column names to have proper units.\n",
     "df.rename(\n",
@@ -149,22 +151,30 @@
    "outputs": [],
    "source": [
     "# Select measurement with 63 CPU cores.\n",
-    "da_64_cores = da['cpu_cores', sc.scalar(63, unit='GB')]\n",
+    "da_63_cores = da['cpu_cores', sc.scalar(63, unit=None)]\n",
     "\n",
+    "da_63_cores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0815cb06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a meta string with the selected data.\n",
-    "df_64_cores = df[df['cpu_cores [GB]']==63].reset_index(drop=True)\n",
-    "df_64_cores_environments = df_64_cores['environment'][0]\n",
+    "df_63_cores = df[df['cpu_cores']==63].reset_index(drop=True)\n",
+    "df_63_cores_envs: BenchmarkEnvironment = df_63_cores['environment'][0]\n",
     "meta_64_cores = [\n",
     "    f\"{ds.coords['target-name'][0].value} \"\n",
-    "    f\"of beamlime @ {df_64_cores_environments.git_commit_id[:7]} \",\n",
-    "    f\"on {df_64_cores_environments.hardware_spec.operating_system} \"\n",
-    "    f\"with {df_64_cores_environments.hardware_spec.total_memory.value} \"\n",
-    "    f\"[{df_64_cores_environments.hardware_spec.total_memory.unit}] of memory, \"\n",
-    "    f\"{da_64_cores.coords['cpu_cores'].value} CPU cores\",\n",
-    "    f\"processing total [{df_64_cores['num_frames [counts]'].min()}, {df_64_cores['num_frames [counts]'].max()}] frames \"\n",
-    "]\n",
-    "\n",
-    "da_64_cores"
+    "    f\"of beamlime @ {df_63_cores_envs.git_commit_id[:7]} \",\n",
+    "    f\"on {df_63_cores_envs.hardware_spec.operating_system} \"\n",
+    "    f\"with {df_63_cores_envs.hardware_spec.total_memory.value} \"\n",
+    "    f\"[{df_63_cores_envs.hardware_spec.total_memory.unit}] of memory, \"\n",
+    "    f\"{da_63_cores.coords['cpu_cores'].value} CPU cores\",\n",
+    "    f\"processing total [{df_63_cores['num_frames [counts]'].min()}, {df_63_cores['num_frames [counts]'].max()}] frames \"\n",
+    "]"
    ]
   },
   {
@@ -174,18 +184,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Draw a contour plot.\n",
     "from matplotlib import pyplot as plt\n",
     "from tests.benchmarks.visualize import plot_contourf\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(10, 7))\n",
-    "ctr = plot_contourf(da_64_cores,\n",
+    "ctr = plot_contourf(da_63_cores,\n",
     "    x_coord='event_rate',\n",
     "    y_coord='num_pixels',\n",
     "    fig=fig,\n",
     "    ax=ax,\n",
     "    levels=[2, 4, 8, 14, 32, 64, 128],\n",
     "    extend='both',\n",
-    "    colors = ['gold', 'yellow', 'orange', 'lime', 'yellowgreen', 'green', 'darkgreen'],\n",
+    "    colors=['gold', 'yellow', 'orange', 'lime', 'yellowgreen', 'green', 'darkgreen'],\n",
     "    under_color='lightgrey',\n",
     "    over_color='darkgreen',\n",
     ")\n",
@@ -196,6 +207,178 @@
     "ax.annotate('14.00 [frame/s]', (5e4, 9e6), size=10)\n",
     "ax.text(10**4, 10**8, '\\n'.join(meta_64_cores))\n",
     "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cabfc0b3",
+   "metadata": {},
+   "source": [
+    "## Performance Comparisons\n",
+    "\n",
+    "We will compare performances of different memory capacity and number of cpu cores.\n",
+    "\n",
+    "Performance differences are calculated with the following function ``difference``."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49e05f4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def difference(da: sc.DataArray, standard_da: sc.DataArray) -> sc.DataArray:\n",
+    "    \"\"\"Difference from the standard data array in percent.\"\"\"\n",
+    "\n",
+    "    return sc.scalar(100, unit='%')*(da - standard_da) / standard_da"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b8cb8a7",
+   "metadata": {},
+   "source": [
+    "### Memory\n",
+    "\n",
+    "More memory capacity did not make any meaningful performance improvement tendency."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34cbff1e",
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "import plopp as pp\n",
+    "\n",
+    "mem_da = ds['speed'].group('total_memory', 'num_pixels', 'event_rate', 'cpu_cores')\n",
+    "mem_da = mem_da['cpu_cores', sc.scalar(6, unit=None)].drop_coords('cpu_cores')  # Select 6 CPU cores.\n",
+    "memory_comparison = mem_da.flatten(('num_pixels', 'event_rate'), 'num_pixels_event_rate')\n",
+    "mean_memory_comparison = sample_mean_per_bin(memory_comparison)\n",
+    "mean_memory_comparison.variances = sample_variance_per_bin(memory_comparison).values\n",
+    "x_tick_labels = [\n",
+    "    f\"{npx=:.0e}\\n{er=:.0e}\"\n",
+    "    for er, npx\n",
+    "    in zip(\n",
+    "        mean_memory_comparison.coords['event_rate'].values,\n",
+    "        mean_memory_comparison.coords['num_pixels'].values\n",
+    "    )\n",
+    "]\n",
+    "mean_memory_comparison.coords['label'] = sc.array(dims=['num_pixels_event_rate'], values=x_tick_labels)\n",
+    "\n",
+    "standard_mem_speed = mean_memory_comparison['total_memory', 0]\n",
+    "lines_per_memory = {\n",
+    "        f\"{mem.value} [{mem.unit}]\": difference(mean_memory_comparison['total_memory', imem], standard_mem_speed)\n",
+    "        for imem, mem in enumerate(mean_memory_comparison.coords['total_memory'])\n",
+    "    }\n",
+    "memory_comparison_line_plot = pp.plot(\n",
+    "    lines_per_memory,\n",
+    "    coords=['label'],\n",
+    "    title=\"Beamlime Performance Comparison per Memory Size\",\n",
+    "    figsize=(24, 4),\n",
+    "    grid=True,\n",
+    "    # norm='log',\n",
+    ")\n",
+    "\n",
+    "for i_line, line_name in zip([0, 2], lines_per_memory.keys()):\n",
+    "    memory_comparison_line_plot.ax.lines[i_line].set_label(line_name)\n",
+    "\n",
+    "df_mem_comparison = df[df['cpu_cores']==6].reset_index(drop=True)\n",
+    "df_mem_comparison_env: BenchmarkEnvironment = df_mem_comparison['environment'][0]\n",
+    "meta_mem_comparison = [\n",
+    "    f\"on {df_mem_comparison_env.hardware_spec.operating_system} \",\n",
+    "    f\"{6} CPU cores\",\n",
+    "    f\"processing total [{df_mem_comparison['num_frames [counts]'].min()}, \"\n",
+    "    f\"{df_mem_comparison['num_frames [counts]'].max()}] frames \",\n",
+    "    \"difference=100*(speed-standard_speed)/standard_speed, with standard speed: 67 GB\"\n",
+    "]\n",
+    "\n",
+    "memory_comparison_line_plot.ax.text(-1,  20, '\\n'.join(meta_mem_comparison))\n",
+    "memory_comparison_line_plot.ax.legend(loc='lower left', title='Memory Size [GB]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ace91b22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory_comparison_line_plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ea6010d",
+   "metadata": {},
+   "source": [
+    "### CPU Cores\n",
+    "\n",
+    "More CPU cores showed improved performance for most cases, especially bigger number of events.\n",
+    "\n",
+    "It was expected due to multi-threaded computing of scipp."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc38f4aa",
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "import plopp as pp\n",
+    "\n",
+    "cpu_da = ds['speed'].group('total_memory', 'num_pixels', 'event_rate', 'cpu_cores')\n",
+    "cpu_da = cpu_da['total_memory', sc.scalar(135, unit='GB')].drop_coords('total_memory')  # Select 135 GB.\n",
+    "cpu_comparison = cpu_da.flatten(('num_pixels', 'event_rate'), 'num_pixels_event_rate')\n",
+    "mean_cpu_comparison = sample_mean_per_bin(cpu_comparison)\n",
+    "mean_cpu_comparison.variances = sample_variance_per_bin(cpu_comparison).values\n",
+    "mean_cpu_comparison.coords['label'] = sc.array(dims=['num_pixels_event_rate'], values=x_tick_labels)\n",
+    "\n",
+    "standard_cpu_speed = mean_cpu_comparison['cpu_cores', 0]\n",
+    "lines_per_cpu = {\n",
+    "        f\"{ncpu.value}\": difference(mean_cpu_comparison['cpu_cores', icpu], standard_cpu_speed)\n",
+    "        for icpu, ncpu in enumerate(mean_cpu_comparison.coords['cpu_cores'])\n",
+    "    }\n",
+    "cpu_comparison_line_plot = pp.plot(\n",
+    "    lines_per_cpu,\n",
+    "    coords=['label'],\n",
+    "    title=\"Beamlime Performance Comparison per Number of CPU Cores\",\n",
+    "    figsize=(24, 4),\n",
+    "    grid=True,\n",
+    "    # norm='log',\n",
+    ")\n",
+    "\n",
+    "for i_line, line_name in enumerate(lines_per_cpu.keys()):\n",
+    "    cpu_comparison_line_plot.ax.lines[i_line*2].set_label(line_name)\n",
+    "\n",
+    "df_cpu_comparison = df[df['total_memory [GB]']==135].reset_index(drop=True)\n",
+    "df_cpu_comparison_env: BenchmarkEnvironment = df_cpu_comparison['environment'][0]\n",
+    "meta_cpu_comparison = [\n",
+    "    f\"on {df_cpu_comparison_env.hardware_spec.operating_system} \",\n",
+    "    f\"{6} CPU cores\",\n",
+    "    f\"processing total [{df_cpu_comparison['num_frames [counts]'].min()}, \"\n",
+    "    f\"{df_cpu_comparison['num_frames [counts]'].max()}] frames \"\n",
+    "]\n",
+    "\n",
+    "cpu_comparison_line_plot.ax.text(-1,  800, '\\n'.join(meta_cpu_comparison))\n",
+    "cpu_comparison_line_plot.ax.legend(loc='lower left', title='CPU Cores')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1a13cf0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpu_comparison_line_plot"
    ]
   }
  ],
