Select target name for plotting performance tests.

--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "# Convert to scipp dataset.\n",
     "ds: sc.Dataset = from_pandas(\n",
-    "    df.drop(columns=['environment']),\n",
+    "    df[df['target-name']=='mini_prototype'].drop(columns=['environment']),\n",
     "    header_parser=parse_bracket_header,\n",
     "    data_columns='time'\n",
     ")\n",
