Update file check sum.

--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -70,6 +70,9 @@
     "import json\n",
     "\n",
     "results = benchmark_results()\n",
+    "import pathlib\n",
+    "\n",
+    "results = pathlib.Path('benchmark_results.json')\n",
     "results_map = json.loads(results.read_text())\n",
     "factory = Factory(loading_providers, env_providers)\n",
     "with factory.constant_provider(ResultMap, results_map):\n",
@@ -119,7 +122,7 @@
     "\n",
     "# Convert to scipp dataset.\n",
     "ds: sc.Dataset = from_pandas(\n",
-    "    df[df['target-name']=='mini_prototype'].drop(columns=['environment']),\n",
+    "    df[df['target-name'] == 'mini_prototype'].drop(columns=['environment']),\n",
     "    header_parser=parse_bracket_header,\n",
     "    data_columns='time'\n",
     ")\n",
@@ -146,23 +149,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d890778b",
+   "id": "0815cb06",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select measurement with 63 CPU cores.\n",
     "da_63_cores = da['cpu_cores', sc.scalar(63, unit=None)]\n",
     "\n",
-    "da_63_cores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0815cb06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Create a meta string with the selected data.\n",
     "df_63_cores = df[df['cpu_cores']==63].reset_index(drop=True)\n",
     "df_63_cores_envs: BenchmarkEnvironment = df_63_cores['environment'][0]\n",
