Add overhead benchmark test result in docs.

--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -369,6 +369,94 @@
    "source": [
     "cpu_comparison_line_plot"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d973ee7",
+   "metadata": {},
+   "source": [
+    "### Offline/Online reduction\n",
+    "\n",
+    "``Online`` data reduction means, it processed chunks of data and merged the result at the end.\n",
+    "\n",
+    "``Onfline`` data redution means, it processed all dataset at once.\n",
+    "\n",
+    "This comparison shows the overhead of ``beamlime`` compared to the normal data reduction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9946706",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert to scipp dataset.\n",
+    "ds_offline: sc.Dataset = from_pandas(\n",
+    "    df[df['target-name'] == 'offline_workflow'].drop(columns=['environment']),\n",
+    "    header_parser=parse_bracket_header,\n",
+    "    data_columns='time'\n",
+    ")\n",
+    "\n",
+    "# Derive speed from time measurements and number of frames.\n",
+    "ds_offline['speed'] = ds_offline.coords['num_frames']/ds_offline['time']\n",
+    "\n",
+    "def group_and_mean_flatten(da: sc.DataArray, *coords) -> sc.DataArray:\n",
+    "    binned = da.group(*coords)\n",
+    "    mean_da = sample_mean_per_bin(binned)\n",
+    "    mean_da.variances = sample_variance_per_bin(binned).values\n",
+    "    return mean_da.flatten(coords, \"_\".join(coords))\n",
+    "\n",
+    "offline_da = group_and_mean_flatten(ds_offline['speed'], 'num_pixels', 'event_rate')\n",
+    "\n",
+    "grouped_by_hw_conditions = ds_offline['speed'].group('cpu_cores', 'total_memory')\n",
+    "selected = ds['speed'].group(*(coord for coord in grouped_by_hw_conditions.coords.values()))\n",
+    "if len(selected) > 1:\n",
+    "    raise ValueError(\"There are more than 1 bin in the grouped dataset.\")\n",
+    "\n",
+    "online_da = group_and_mean_flatten(selected.values[0], 'num_pixels', 'event_rate')\n",
+    "\n",
+    "for da in (online_da, offline_da):\n",
+    "    da.coords['label'] = sc.array(dims=['num_pixels_event_rate'], values=x_tick_labels)\n",
+    "\n",
+    "onoff_lines = {\n",
+    "        label: difference(onoff_da, offline_da)\n",
+    "        for label, onoff_da in zip([\"offline\", \"online\"], [offline_da, online_da])\n",
+    "    }\n",
+    "onoffline_comparison = pp.plot(\n",
+    "    onoff_lines,\n",
+    "    coords=['label'],\n",
+    "    title=\"Beamlime online reduction speed compared to offline reduction.\",\n",
+    "    figsize=(24, 4),\n",
+    "    grid=True\n",
+    ")\n",
+    "\n",
+    "for i_line, line_name in zip([0, 2], onoff_lines.keys()):\n",
+    "    onoffline_comparison.ax.lines[i_line].set_label(line_name)\n",
+    "\n",
+    "df_offline = df[df['target-name']=='offline_workflow'].reset_index(drop=True)\n",
+    "df_offline_env: BenchmarkEnvironment = df_offline['environment'][0]\n",
+    "meta_onoff_comparison = [\n",
+    "    f\"on {df_offline_env.hardware_spec.operating_system}, \"\n",
+    "    f\"{grouped_by_hw_conditions.coords['cpu_cores'][0].value} CPU cores\",\n",
+    "    f\"processing total [{df_offline['num_frames [counts]'].min()}, \"\n",
+    "    f\"{df_offline['num_frames [counts]'].max()}] frames \",\n",
+    "    \"difference=100*(speed-standard_speed)/standard_speed, \\nwith standard speed: Offline\"\n",
+    "]\n",
+    "\n",
+    "onoffline_comparison.ax.text(-1,  12, '\\n'.join(meta_onoff_comparison))\n",
+    "onoffline_comparison.ax.legend(loc='center left', title='on/off, Offline')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5b59615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "onoffline_comparison"
+   ]
   }
  ],
  "metadata": {
