Hide long plotting cell and update description.

--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -379,7 +379,8 @@
     "\n",
     "``Online`` data reduction means, it processed chunks of data and merged the result at the end.\n",
     "\n",
-    "``Onfline`` data redution means, it processed all dataset at once.\n",
+    "``Offline`` data redution means, it processed all dataset at once.\n",
+    "It was collected via one of benchmark tests in ``workflow_test.py`` under ``tests/prototypes``.\n",
     "\n",
     "This comparison shows the overhead of ``beamlime`` compared to the normal data reduction."
    ]
@@ -388,7 +389,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e9946706",
-   "metadata": {},
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
    "outputs": [],
    "source": [
     "# Convert to scipp dataset.\n",
