Update on/offline workflow comparison plot."

--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -377,18 +377,18 @@
    "source": [
     "### Offline/Online reduction\n",
     "\n",
-    "``Online`` data reduction means, it processed chunks of data and merged the result at the end.\n",
+    "``Online`` data reduction means, it processed each chunk of data asynchronously and merged the result at the end.\n",
     "\n",
-    "``Offline`` data redution means, it processed all dataset at once.\n",
+    "``Offline`` data redution means, it processed chunks dataset one by one synchronously and merge the result at the end.\n",
     "It was collected via one of benchmark tests in ``workflow_test.py`` under ``tests/prototypes``.\n",
     "\n",
-    "This comparison shows the overhead of ``beamlime`` compared to the normal data reduction."
+    "This comparison between same number of chunks shows the overhead of ``beamlime`` compared to the normal data reduction."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9946706",
+   "id": "765cd2e9",
    "metadata": {
     "nbsphinx": "hidden"
    },
@@ -401,41 +401,64 @@
     "    data_columns='time'\n",
     ")\n",
     "\n",
-    "# Derive speed from time measurements and number of frames.\n",
-    "ds_offline['speed'] = ds_offline.coords['num_frames']/ds_offline['time']\n",
+    "# Derive process time per frame from time measurements and number of frames.\n",
+    "ds['time_per_frame'] = ds['time']/ds.coords['num_frames']\n",
+    "ds_offline['time_per_frame'] = ds_offline['time']/ds_offline.coords['num_frames']\n",
     "\n",
-    "def group_and_mean_flatten(da: sc.DataArray, *coords) -> sc.DataArray:\n",
+    "def group_and_mean(da: sc.DataArray, *coords) -> sc.DataArray:\n",
     "    binned = da.group(*coords)\n",
     "    mean_da = sample_mean_per_bin(binned)\n",
     "    mean_da.variances = sample_variance_per_bin(binned).values\n",
-    "    return mean_da.flatten(coords, \"_\".join(coords))\n",
+    "    return mean_da\n",
     "\n",
-    "offline_da = group_and_mean_flatten(ds_offline['speed'], 'num_pixels', 'event_rate')\n",
-    "\n",
-    "grouped_by_hw_conditions = ds_offline['speed'].group('cpu_cores', 'total_memory')\n",
-    "selected = ds['speed'].group(*(coord for coord in grouped_by_hw_conditions.coords.values()))\n",
+    "offline_da = group_and_mean(ds_offline['time_per_frame'].group('chunk_size'), 'num_pixels', 'event_rate')\n",
+    "grouped_by_hw_conditions = ds_offline['time_per_frame'].group('cpu_cores', 'total_memory')\n",
+    "selected = ds['time_per_frame'].group(*(coord for coord in grouped_by_hw_conditions.coords.values()))\n",
     "if len(selected) > 1:\n",
     "    raise ValueError(\"There are more than 1 bin in the grouped dataset.\")\n",
     "\n",
-    "online_da = group_and_mean_flatten(selected.values[0], 'num_pixels', 'event_rate')\n",
+    "online_da = group_and_mean(selected.values[0], 'num_pixels', 'event_rate')\n",
     "\n",
-    "for da in (online_da, offline_da):\n",
-    "    da.coords['label'] = sc.array(dims=['num_pixels_event_rate'], values=x_tick_labels)\n",
-    "\n",
+    "chunk_sizes = offline_da.coords['chunk_size']\n",
+    "chunk_size_labels = [\n",
+    "    f\"offline-{int(140/chunk_size.value)}-chunk(s)\"\n",
+    "    for chunk_size in chunk_sizes\n",
+    "]\n",
+    "da_per_chunk_sizes = [\n",
+    "    offline_da['chunk_size', chunk_size]\n",
+    "    for chunk_size in chunk_sizes\n",
+    "]\n",
     "onoff_lines = {\n",
-    "        label: difference(onoff_da, offline_da)\n",
-    "        for label, onoff_da in zip([\"offline\", \"online\"], [offline_da, online_da])\n",
+    "    str(num_pixel.value): {\n",
+    "        label: onoff_da['num_pixels', num_pixel].drop_coords('num_pixels')\n",
+    "        for label, onoff_da in zip(\n",
+    "            [*chunk_size_labels, \"online-5-chunk(s)\"],\n",
+    "            [*da_per_chunk_sizes, online_da]\n",
+    "        )\n",
     "    }\n",
-    "onoffline_comparison = pp.plot(\n",
-    "    onoff_lines,\n",
-    "    coords=['label'],\n",
-    "    title=\"Beamlime online reduction speed compared to offline reduction.\",\n",
-    "    figsize=(24, 4),\n",
-    "    grid=True\n",
-    ")\n",
+    "    for num_pixel in offline_da.coords['num_pixels']\n",
+    "}\n",
     "\n",
-    "for i_line, line_name in zip([0, 2], onoff_lines.keys()):\n",
-    "    onoffline_comparison.ax.lines[i_line].set_label(line_name)\n",
+    "onoffline_comparison_map = {\n",
+    "    key: pp.plot(\n",
+    "        onoff_lines[key],\n",
+    "        # coords=['label'],\n",
+    "        title=f\"Beamlime data reduction process time with {int(key):.0e} pixels.\",\n",
+    "        figsize=(6, 3),\n",
+    "        grid=True,\n",
+    "        scale={'event_rate': 'log'},\n",
+    "    )\n",
+    "    for num_pixel in offline_da.coords['num_pixels']\n",
+    "    if (key:=str(num_pixel.value)) in onoff_lines\n",
+    "}\n",
+    "\n",
+    "onoffline_comparison_map['100000']\n",
+    "total_number = len(onoffline_comparison_map)\n",
+    "n_col = 3\n",
+    "n_row = total_number//n_col + total_number%n_col\n",
+    "onoff_tiled = pp.tiled(\n",
+    "    nrows=n_row, ncols=n_col, figsize=(6*n_col, 3*n_row + 2)\n",
+    ")\n",
     "\n",
     "df_offline = df[df['target-name']=='offline_workflow'].reset_index(drop=True)\n",
     "df_offline_env: BenchmarkEnvironment = df_offline['environment'][0]\n",
@@ -447,8 +470,16 @@
     "    \"difference=100*(speed-standard_speed)/standard_speed, \\nwith standard speed: Offline\"\n",
     "]\n",
     "\n",
-    "onoffline_comparison.ax.text(-1,  12, '\\n'.join(meta_onoff_comparison))\n",
-    "onoffline_comparison.ax.legend(loc='center left', title='on/off, Offline')"
+    "for i, (num_pixel, plot) in enumerate(onoffline_comparison_map.items()):\n",
+    "    plot.ax.text(-1,  20, '\\n'.join(meta_onoff_comparison))\n",
+    "    onoff_tiled[i//n_col, i%n_col] = plot\n",
+    "\n",
+    "\n",
+    "onoff_tiled[0, 0].ax.text(7000,  0.22, '\\n'.join(meta_onoff_comparison))\n",
+    "onoff_tiled.fig.suptitle(\n",
+    "    \"Online(asynchronous)/Offline(synchronous) data reduction process time per frame\",\n",
+    "    fontsize=16,\n",
+    ")"
    ]
   },
   {
@@ -458,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "onoffline_comparison"
+    "onoff_tiled"
    ]
   }
  ],
