Update plot to show total time.

--- a/docs/about/ess-instruments.ipynb
+++ b/docs/about/ess-instruments.ipynb
@@ -401,23 +401,20 @@
     "    data_columns='time'\n",
     ")\n",
     "\n",
-    "# Derive process time per frame from time measurements and number of frames.\n",
-    "ds['time_per_frame'] = ds['time']/ds.coords['num_frames']\n",
-    "ds_offline['time_per_frame'] = ds_offline['time']/ds_offline.coords['num_frames']\n",
-    "\n",
     "def group_and_mean(da: sc.DataArray, *coords) -> sc.DataArray:\n",
     "    binned = da.group(*coords)\n",
     "    mean_da = sample_mean_per_bin(binned)\n",
     "    mean_da.variances = sample_variance_per_bin(binned).values\n",
     "    return mean_da\n",
     "\n",
-    "offline_da = group_and_mean(ds_offline['time_per_frame'].group('chunk_size'), 'num_pixels', 'event_rate')\n",
-    "grouped_by_hw_conditions = ds_offline['time_per_frame'].group('cpu_cores', 'total_memory')\n",
-    "selected = ds['time_per_frame'].group(*(coord for coord in grouped_by_hw_conditions.coords.values()))\n",
-    "if len(selected) > 1:\n",
-    "    raise ValueError(\"There are more than 1 bin in the grouped dataset.\")\n",
-    "\n",
-    "online_da = group_and_mean(selected.values[0], 'num_pixels', 'event_rate')\n",
+    "offline_time = ds_offline['time'].group('num_frames')['num_frames', sc.scalar(140, unit='counts')].values\n",
+    "offline_da = group_and_mean(offline_time.group('chunk_size'), 'num_pixels', 'event_rate')\n",
+    "grouped_by_hw_conditions = offline_time.group('cpu_cores', 'total_memory')\n",
+    "online_time = ds['time'].group('cpu_cores', 'total_memory', 'num_frames')\\\n",
+    "    ['cpu_cores', sc.scalar(12, unit=None)]\\\n",
+    "        ['total_memory', sc.scalar(135, unit='GB')]\\\n",
+    "            ['num_frames', sc.scalar(140, unit='counts')].values\n",
+    "online_da = group_and_mean(online_time, 'num_pixels', 'event_rate')\n",
     "\n",
     "chunk_sizes = offline_da.coords['chunk_size']\n",
     "chunk_size_labels = [\n",
@@ -442,8 +439,7 @@
     "onoffline_comparison_map = {\n",
     "    key: pp.plot(\n",
     "        onoff_lines[key],\n",
-    "        # coords=['label'],\n",
-    "        title=f\"Beamlime data reduction process time with {int(key):.0e} pixels.\",\n",
+    "        title=f\"{int(key):.0e} pixels\",\n",
     "        figsize=(6, 3),\n",
     "        grid=True,\n",
     "        scale={'event_rate': 'log'},\n",
@@ -463,21 +459,19 @@
     "df_offline = df[df['target-name']=='offline_workflow'].reset_index(drop=True)\n",
     "df_offline_env: BenchmarkEnvironment = df_offline['environment'][0]\n",
     "meta_onoff_comparison = [\n",
-    "    f\"on {df_offline_env.hardware_spec.operating_system}, \"\n",
-    "    f\"{grouped_by_hw_conditions.coords['cpu_cores'][0].value} CPU cores\",\n",
-    "    f\"processing total [{df_offline['num_frames [counts]'].min()}, \"\n",
-    "    f\"{df_offline['num_frames [counts]'].max()}] frames \",\n",
-    "    \"difference=100*(speed-standard_speed)/standard_speed, \\nwith standard speed: Offline\"\n",
-    "]\n",
+    "        f\"on {df_offline_env.hardware_spec.operating_system}, \"\n",
+    "        f\"{grouped_by_hw_conditions.coords['cpu_cores'][0].value} CPU cores\",\n",
+    "        f\"processing total 140 frames \",\n",
+    "    ]\n",
     "\n",
     "for i, (num_pixel, plot) in enumerate(onoffline_comparison_map.items()):\n",
     "    plot.ax.text(-1,  20, '\\n'.join(meta_onoff_comparison))\n",
     "    onoff_tiled[i//n_col, i%n_col] = plot\n",
     "\n",
     "\n",
-    "onoff_tiled[0, 0].ax.text(7000,  0.22, '\\n'.join(meta_onoff_comparison))\n",
+    "onoff_tiled[0, 0].ax.text(6500, 30, '\\n'.join(meta_onoff_comparison))\n",
     "onoff_tiled.fig.suptitle(\n",
-    "    \"Online(asynchronous)/Offline(synchronous) data reduction process time per frame\",\n",
+    "    \"Online(asynchronous)/Offline(synchronous) data reduction process time for 140 frames\",\n",
     "    fontsize=16,\n",
     ")"
    ]
